[gd_scene load_steps=4 format=3 uid="uid://dkocl0ed6x25h"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_ilibl"]
[ext_resource type="Texture2D" uid="uid://cjpitfdurcaqg" path="res://scenes/game_over/ui-background-lose.png" id="2_d2ayf"]
[ext_resource type="FontFile" uid="uid://dl8717bgierds" path="res://ui/pixelify_sans_regular.ttf" id="3_hjnrg"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ilibl")

[node name="Bkg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1163.0
offset_top = -442.0
offset_right = -523.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("2_d2ayf")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 589.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="Text" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Heading" type="Label" parent="MarginContainer/Text"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hjnrg")
theme_override_font_sizes/font_size = 71
text = "You Were Caught"

[node name="CountMsgContainer" type="HBoxContainer" parent="MarginContainer/Text"]
layout_mode = 2

[node name="Msg1" type="RichTextLabel" parent="MarginContainer/Text/CountMsgContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_hjnrg")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Grabbed "
fit_content = true
autowrap_mode = 0

[node name="Count" type="RichTextLabel" parent="MarginContainer/Text/CountMsgContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_hjnrg")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0

[node name="Msg2" type="RichTextLabel" parent="MarginContainer/Text/CountMsgContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_hjnrg")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = " Item(s)"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = 467.0
offset_right = 583.0
offset_bottom = 542.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TryAgain" type="RichTextLabel" parent="MarginContainer2"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_hjnrg")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Press Space To Try Again"
fit_content = true
